Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50513

QWebEngineUrlRequestInterceptor::interceptRequest() documentation is wrong.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.6.0 RC
    • 5.6.0 Beta
    • WebEngine
    • None
    • 9e44ef9432d44cbd326557124036976b056d7868

      According to the documentation of QWebEngineUrlRequestInterceptor::interceptRequest():

      If this function is only used for inspection, it should return false

      This method was changed to return void instead. The documentation needs to be corrected.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mibrunin Michael Bruning
            luizromario Luiz Romário Santana Rios
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes