Correct QWebEngineUrlRequestInterceptor documentation.

The documentation was still based on the initial version of
the method, where it had to return a boolean value. This is
no longer the case and hence removed from the doc.

Change-Id: Ica1e4a769631c0169bc5e59abd54c25a416cf4a9
Task-number: QTBUG-50513
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>